--- a/.github/workflows/ibm_test.yaml
+++ b/.github/workflows/ibm_test.yaml
@@ -1,15 +1,14 @@
 name: IBM Cloud Auto Restart
 
-
 on:
 #  push:
 #    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
-#  schedule:
-#    - cron: 0 0 1 1 *
-  workflow_dispatch:
-    inputs:
+  schedule:
+    - cron: 0 4 * * 5
+#  watch:
+#    types: [started]
 
 jobs:
   ibm-cloud-restart:
@@ -18,28 +17,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Init
+    - name: Install Cloud Foundry CLI
       run: |
-        chmod -R 777 ./IBM_Cloud_CLI/
-    - name: Login IBM Cloud
-      env:
-        IBM_ACCOUNT: ${{ secrets.IBM_ACCOUNT }}
-        REGION_NUM: ${{ secrets.REGION_NUM }}
-      run: |
-        ./IBM_Cloud_CLI/ibmcloud login <<EOF
-        $IBM_ACCOUNT
-        $REGION_NUM
-        no
-        EOF
-    - name: Target IBM Cloud
-      env:
-        RESOURSE_ID: ${{ secrets.RESOURSE_ID }}
-      run: |
-        ./IBM_Cloud_CLI/ibmcloud target -g "$RESOURSE_ID"
-        ./IBM_Cloud_CLI/ibmcloud target --cf
-        ./IBM_Cloud_CLI/ibmcloud cf install -f -v 6.51.0
-    - name: Restart IBM Cloud
-      env:
-        IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
-      run: |
-        ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME"
+        curl -L "https://packages.cloudfoundry.org/stable?release=linux64-binary&source=github&version=v6" | tar -zx
+        sudo mv cf /usr/local/bin
+      
+    - name: Login Cloud Foundry
+      run: cf l -a https://api.${{ secrets.IBM_RGN }}.cf.cloud.ibm.com login -u ${{ secrets.IBM_MAIL }} -p ${{ secrets.IBM_PWD }}
+      
+    - name: Restart Cloud Foundry APP
+      run: cf restart ${{ secrets.IBM_APP_NAME }}
